<resources>
<!--tempat meletakkan kata yang nantinya akan di panggul di halaman
activity.kt-->
    <string name="app_name">Hello IT Telkom Purwokerto</string>
    <string name="lbl_name">Nama Mahasiswa</string>
    <string name="my_name">Rafi Albaihaqi</string>
    <string name="lbl_nim">Nim Mahasiswa</string>
    <string name="my_nim">19104042</string>
    <string name="ganti_halaman">Ganti Halaman</string>
</resources>
