<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--header text view layout menampilkan helloittp-->
    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--textview label layout untuk menampilkan nama mahasiswa-->
    <TextView
        android:id="@+id/text_lbl_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/lbl_name"
        app:layout_constraintBottom_toBottomOf="@id/edit_my_name"
        app:layout_constraintEnd_toStartOf="@id/edit_my_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_my_name" />

<!--edit text untuk menampikan kan editan text user
dan disini diisi nama mahasiswa-->
    <EditText
        android:id="@+id/edit_my_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/my_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_lbl_name"
        app:layout_constraintTop_toBottomOf="@id/text_header" />

<!--text view label untuk menampilkan nama mahasiswa -->
    <TextView
        android:id="@+id/text_lbl_nim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/lbl_nim"
        app:layout_constraintBottom_toBottomOf="@id/edit_my_nim"
        app:layout_constraintEnd_toStartOf="@id/edit_my_nim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_my_nim" />

<!-- edit text untuk menampikan text bisa diedit
disini diisi default sesuai dengan nim-->
    <EditText
        android:id="@+id/edit_my_nim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/my_nim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_lbl_nim"
        app:layout_constraintTop_toBottomOf="@id/edit_my_name" />

<!-- button layout, menampilkan ganti hamalan yang -->
    <Button
        android:id="@+id/btnPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ganti_halaman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_my_nim" />

</androidx.constraintlayout.widget.ConstraintLayout>